Fixing text behind image in carousel

--- a/components/carousel/FeaturedView.less
+++ b/components/carousel/FeaturedView.less
@@ -88,6 +88,9 @@
                     margin-left: 0;
                     margin: auto;
 
+                    display: -webkit-flex;
+                    align-items: flex-end;
+
                     &-container {
                         height: auto;
 
